--- a/FaineSwitcherSetup/Product.wxs
+++ b/FaineSwitcherSetup/Product.wxs
@@ -43,17 +43,60 @@
 
     <!--define references -->
     <Feature Id="ProductFeature" Title="FaineSwitcher" Level="1">
-      <ComponentRef Id="ApplicationShortcut" />
+        <ComponentRef Id="ApplicationShortcut" />
       <ComponentRef Id="ApplicationShortcutDesctop" />
       <ComponentRef Id="FaineSwitch.exe" />
-      <ComponentRef Id="DebugFiles" />
+      <ComponentRef Id="MLModel1.zip" />
       <ComponentRef Id="FaineSwitch.exe.config" />
+      <ComponentRef Id="FaineSwitch.exe.manifest" />
+      <ComponentRef Id="FaineSwitch.ico" />
+      <ComponentRef Id="FaineSwitch.pdb" />
+      <ComponentRef Id="LdaNative.dll" />
+      <ComponentRef Id="Microsoft.ML.Core.dll" />
+      <ComponentRef Id="Microsoft.ML.Core.xml" />
+      <ComponentRef Id="Microsoft.ML.CpuMath.dll" />
+      <ComponentRef Id="Microsoft.ML.CpuMath.xml" />
+      <ComponentRef Id="Microsoft.ML.Data.dll" />
+      <ComponentRef Id="Microsoft.ML.Data.xml" />
+      <ComponentRef Id="Microsoft.ML.DataView.dll" />
+      <ComponentRef Id="Microsoft.ML.DataView.xml" />
+      <ComponentRef Id="Microsoft.ML.dll" />
+      <ComponentRef Id="Microsoft.ML.KMeansClustering.dll" />
+      <ComponentRef Id="Microsoft.ML.KMeansClustering.xml" />
+      <ComponentRef Id="Microsoft.ML.PCA.dll" />
+      <ComponentRef Id="Microsoft.ML.PCA.xml" />
+      <ComponentRef Id="Microsoft.ML.StandardTrainers.dll" />
+      <ComponentRef Id="Microsoft.ML.StandardTrainers.xml" />
+      <ComponentRef Id="Microsoft.ML.Transforms.dll" />
+      <ComponentRef Id="Microsoft.ML.Transforms.xml" />
+      <ComponentRef Id="Microsoft.ML.xml" />
+      <ComponentRef Id="Newtonsoft.Json.dll" />
+      <ComponentRef Id="Newtonsoft.Json.xml" />
+      <ComponentRef Id="System.Buffers.dll" />
+      <ComponentRef Id="System.Buffers.xml" />
+      <ComponentRef Id="System.CodeDom.dll" />
+      <ComponentRef Id="System.Collections.Immutable.dll" />
+      <ComponentRef Id="System.Collections.Immutable.xml" />
+      <ComponentRef Id="System.Memory.dll" />
+      <ComponentRef Id="System.Memory.xml" />
+      <ComponentRef Id="System.Numerics.Vectors.dll" />
+      <ComponentRef Id="System.Numerics.Vectors.xml" />
+      <ComponentRef Id="System.Runtime.CompilerServices.Unsafe.dll" />
+      <ComponentRef Id="System.Runtime.CompilerServices.Unsafe.xml" />
+      <ComponentRef Id="System.Threading.Channels.dll" />
+      <ComponentRef Id="System.Threading.Channels.xml" />
+      <ComponentRef Id="System.Threading.Tasks.Extensions.dll" />
+      <ComponentRef Id="System.Threading.Tasks.Extensions.xml" />
+      <ComponentRef Id="CpuMathNative.dll" />
+      <ComponentRef Id="FaineSwitch.application" />
     </Feature>
 
     <!--define path references -->
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
-        <Directory Id="APPLICATIONROOTDIRECTORY" Name="FaineSwitcher" />
+        <Directory Id="APPLICATIONROOTDIRECTORY" Name="FaineSwitcher" >
+          <Directory Id="APPLICATIONROOTDIRECTORY_ML" Name="ML" />
+        </Directory>
       </Directory>
 
       <Directory Id="ProgramMenuFolder">
@@ -89,19 +132,142 @@
 
 
     <!-- file registration -->
+    <DirectoryRef Id="APPLICATIONROOTDIRECTORY_ML">
+    <Component Id="MLModel1.zip" Guid="5c0a3e22-d781-4394-80a9-8e2723486ce8">
+        <File Id="MLModel1.zip" Name="MLModel1.zip" Source="$(var.FaineSwitcher_TargetDir)ML/MLModel1.zip" />
+      </Component>
+    </DirectoryRef>
+
+
     <DirectoryRef Id="APPLICATIONROOTDIRECTORY">
-      <!-- <Component Id="FaineSwitch.exe.config" Guid="c06088f7-41d9-4b9d-9b59-8b76da106cdf">
+      <Component Id="FaineSwitch.exe.config" Guid="c06088f7-41d9-4b9d-9b59-8b76da106cdf">
         <File Id="FaineSwitch.exe.config" Name="FaineSwitch.exe.config" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.exe.config" />
       </Component>
       <Component Id="FaineSwitch.exe" Guid="bb6891a0-5e51-477f-8f84-d80747cbcc1b">
         <File Id="FaineSwitch.exe" Name="FaineSwitch.exe" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.exe" />
       </Component>
-      <Component Id="MLModel1.zip" Guid="5c0a3e22-d781-4394-80a9-8e2723486ce8">
-        <File Id="MLModel1.zip" Name="MLModel1.zip" Source="$(var.FaineSwitcher_TargetDir)ML/MLModel1.zip" />
-      </Component> -->
-
-      <Component Id="DebugFiles" Guid="5c0a3e22-d781-4394-80a9-8e2723486ce8">
-        <File Source="$(var.FaineSwitcher_TargetDir)*" />
+      <Component Id="FaineSwitch.exe.manifest" Guid="f4406d10-f2dd-4bf3-b6a4-0ebd5c1b306b">
+        <File Id="FaineSwitch.exe.manifest" Name="FaineSwitch.exe.manifest" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.exe.manifest" />
+      </Component>
+      <Component Id="FaineSwitch.ico" Guid="142c4498-9c4c-42f4-bf1c-57b52c217642">
+        <File Id="FaineSwitch.ico" Name="FaineSwitch.ico" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.ico" />
+      </Component>
+      <Component Id="FaineSwitch.pdb" Guid="d73096c7-0a18-4430-b6e4-009d9fa6dddc">
+        <File Id="FaineSwitch.pdb" Name="FaineSwitch.pdb" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.pdb" />
+      </Component>
+      <Component Id="LdaNative.dll" Guid="5cfa88d3-4ed2-45aa-b9ff-a272d1d7ac16">
+        <File Id="LdaNative.dll" Name="LdaNative.dll" Source="$(var.FaineSwitcher_TargetDir)LdaNative.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.Core.dll" Guid="d5b200ba-5d99-455d-b967-a21011fc4f2a">
+        <File Id="Microsoft.ML.Core.dll" Name="Microsoft.ML.Core.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Core.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.Core.xml" Guid="d78f268c-6182-4e94-ac99-353edcbd488d">
+        <File Id="Microsoft.ML.Core.xml" Name="Microsoft.ML.Core.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Core.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.CpuMath.dll" Guid="9b6b9dfd-e84d-4a53-80e2-66a181515860">
+        <File Id="Microsoft.ML.CpuMath.dll" Name="Microsoft.ML.CpuMath.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.CpuMath.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.CpuMath.xml" Guid="7aec4c06-0a22-46e5-be70-44558ba46a7f">
+        <File Id="Microsoft.ML.CpuMath.xml" Name="Microsoft.ML.CpuMath.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.CpuMath.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.Data.dll" Guid="2d993400-e370-45cd-bd63-8303eaffe711">
+        <File Id="Microsoft.ML.Data.dll" Name="Microsoft.ML.Data.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Data.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.Data.xml" Guid="437a763a-d6a6-4fd6-82be-407b53e86b22">
+        <File Id="Microsoft.ML.Data.xml" Name="Microsoft.ML.Data.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Data.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.DataView.dll" Guid="7ff23ad7-b8e9-4601-8a9e-e8f9c2427b1b">
+        <File Id="Microsoft.ML.DataView.dll" Name="Microsoft.ML.DataView.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.DataView.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.DataView.xml" Guid="c7e15a0e-6c04-4a6e-9684-b76a58307f16">
+        <File Id="Microsoft.ML.DataView.xml" Name="Microsoft.ML.DataView.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.DataView.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.dll" Guid="ee81524e-65c1-4b9e-8c84-676bdb81de3a">
+        <File Id="Microsoft.ML.dll" Name="Microsoft.ML.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.KMeansClustering.dll" Guid="7fbf6a5c-42c4-42ca-9e0a-1246c5db53d7">
+        <File Id="Microsoft.ML.KMeansClustering.dll" Name="Microsoft.ML.KMeansClustering.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.KMeansClustering.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.KMeansClustering.xml" Guid="633ee8a9-fcef-4c3b-ab19-c978c3c4577c">
+        <File Id="Microsoft.ML.KMeansClustering.xml" Name="Microsoft.ML.KMeansClustering.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.KMeansClustering.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.PCA.dll" Guid="20042b27-255f-4fd0-ab44-86c542dfcd6e">
+        <File Id="Microsoft.ML.PCA.dll" Name="Microsoft.ML.PCA.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.PCA.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.PCA.xml" Guid="a6f1bcff-8ece-407d-b419-8df65b40ecaa">
+        <File Id="Microsoft.ML.PCA.xml" Name="Microsoft.ML.PCA.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.PCA.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.StandardTrainers.dll" Guid="d9450391-e772-4679-9d6e-0a95e519dd88">
+        <File Id="Microsoft.ML.StandardTrainers.dll" Name="Microsoft.ML.StandardTrainers.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.StandardTrainers.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.StandardTrainers.xml" Guid="6a061948-3d67-44bc-aff7-d6054d1ee322">
+        <File Id="Microsoft.ML.StandardTrainers.xml" Name="Microsoft.ML.StandardTrainers.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.StandardTrainers.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.Transforms.dll" Guid="575afef2-47c7-41be-aeb2-bd155161755e">
+        <File Id="Microsoft.ML.Transforms.dll" Name="Microsoft.ML.Transforms.dll" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Transforms.dll" />
+      </Component>
+      <Component Id="Microsoft.ML.Transforms.xml" Guid="96d054fe-71fd-4ce9-896e-16d6486df54c">
+        <File Id="Microsoft.ML.Transforms.xml" Name="Microsoft.ML.Transforms.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.Transforms.xml" />
+      </Component>
+      <Component Id="Microsoft.ML.xml" Guid="371d3e5e-8a5c-411c-9fc0-9efb5efe5cba">
+        <File Id="Microsoft.ML.xml" Name="Microsoft.ML.xml" Source="$(var.FaineSwitcher_TargetDir)Microsoft.ML.xml" />
+      </Component>
+      <Component Id="Newtonsoft.Json.dll" Guid="234fe8ad-37d6-4779-b8e3-b63b44cde1d2">
+        <File Id="Newtonsoft.Json.dll" Name="Newtonsoft.Json.dll" Source="$(var.FaineSwitcher_TargetDir)Newtonsoft.Json.dll" />
+      </Component>
+      <Component Id="Newtonsoft.Json.xml" Guid="370eba80-e3b6-4556-87e7-acfbec3c9f60">
+        <File Id="Newtonsoft.Json.xml" Name="Newtonsoft.Json.xml" Source="$(var.FaineSwitcher_TargetDir)Newtonsoft.Json.xml" />
+      </Component>
+      <Component Id="System.Buffers.dll" Guid="86cd613d-0ab6-482c-80c8-d5cd5cfc5cd2">
+        <File Id="System.Buffers.dll" Name="System.Buffers.dll" Source="$(var.FaineSwitcher_TargetDir)System.Buffers.dll" />
+      </Component>
+      <Component Id="System.Buffers.xml" Guid="c8176e8b-fda6-4ce3-9d86-0ae564d2c003">
+        <File Id="System.Buffers.xml" Name="System.Buffers.xml" Source="$(var.FaineSwitcher_TargetDir)System.Buffers.xml" />
+      </Component>
+      <Component Id="System.CodeDom.dll" Guid="350b122e-0e2e-4ac9-aa18-0c761636a768">
+        <File Id="System.CodeDom.dll" Name="System.CodeDom.dll" Source="$(var.FaineSwitcher_TargetDir)System.CodeDom.dll" />
+      </Component>
+      <Component Id="System.Collections.Immutable.dll" Guid="GUID_eb5b7128-a732-4927-a825-0b6c97fc2158HERE">
+        <File Id="System.Collections.Immutable.dll" Name="System.Collections.Immutable.dll" Source="$(var.FaineSwitcher_TargetDir)System.Collections.Immutable.dll" />
+      </Component>
+      <Component Id="System.Collections.Immutable.xml" Guid="3761f027-db18-4ddf-a64d-16b2c38e8968">
+        <File Id="System.Collections.Immutable.xml" Name="System.Collections.Immutable.xml" Source="$(var.FaineSwitcher_TargetDir)System.Collections.Immutable.xml" />
+      </Component>
+      <Component Id="System.Memory.dll" Guid="00c43230-94d1-4fd6-b2e6-f444ee539ab5">
+        <File Id="System.Memory.dll" Name="System.Memory.dll" Source="$(var.FaineSwitcher_TargetDir)System.Memory.dll" />
+      </Component>
+      <Component Id="System.Memory.xml" Guid="c483bbcc-0fed-46c3-bdfd-c41893d6d04c">
+        <File Id="System.Memory.xml" Name="System.Memory.xml" Source="$(var.FaineSwitcher_TargetDir)System.Memory.xml" />
+      </Component>
+      <Component Id="System.Numerics.Vectors.dll" Guid="4ba682d0-b137-4478-acee-2ef389b1d942">
+        <File Id="System.Numerics.Vectors.dll" Name="System.Numerics.Vectors.dll" Source="$(var.FaineSwitcher_TargetDir)System.Numerics.Vectors.dll" />
+      </Component>
+      <Component Id="System.Numerics.Vectors.xml" Guid="8891542d-894d-45ff-8747-7d3cbc9f6b37">
+        <File Id="System.Numerics.Vectors.xml" Name="System.Numerics.Vectors.xml" Source="$(var.FaineSwitcher_TargetDir)System.Numerics.Vectors.xml" />
+      </Component>
+      <Component Id="System.Runtime.CompilerServices.Unsafe.dll" Guid="a0e272ee-914e-4c19-b759-28285115af88">
+        <File Id="System.Runtime.CompilerServices.Unsafe.dll" Name="System.Runtime.CompilerServices.Unsafe.dll" Source="$(var.FaineSwitcher_TargetDir)System.Runtime.CompilerServices.Unsafe.dll" />
+      </Component>
+      <Component Id="System.Runtime.CompilerServices.Unsafe.xml" Guid="e0605da6-d34a-4ec1-a91c-e71046968b4c">
+        <File Id="System.Runtime.CompilerServices.Unsafe.xml" Name="System.Runtime.CompilerServices.Unsafe.xml" Source="$(var.FaineSwitcher_TargetDir)System.Runtime.CompilerServices.Unsafe.xml" />
+      </Component>
+      <Component Id="System.Threading.Channels.dll" Guid="8a432228-e90f-414d-9d09-623bcc2afd45">
+        <File Id="System.Threading.Channels.dll" Name="System.Threading.Channels.dll" Source="$(var.FaineSwitcher_TargetDir)System.Threading.Channels.dll" />
+      </Component>
+      <Component Id="System.Threading.Channels.xml" Guid="d82a2673-9378-407f-86bd-f36725543e03">
+        <File Id="System.Threading.Channels.xml" Name="System.Threading.Channels.xml" Source="$(var.FaineSwitcher_TargetDir)System.Threading.Channels.xml" />
+      </Component>
+      <Component Id="System.Threading.Tasks.Extensions.dll" Guid="6d55caae-f105-4b5d-8f27-3129aa5acbb2">
+        <File Id="System.Threading.Tasks.Extensions.dll" Name="System.Threading.Tasks.Extensions.dll" Source="$(var.FaineSwitcher_TargetDir)System.Threading.Tasks.Extensions.dll" />
+      </Component>
+      <Component Id="System.Threading.Tasks.Extensions.xml" Guid="7fe5c5dd-87ac-4fa3-bc0c-89fefaad0282">
+        <File Id="System.Threading.Tasks.Extensions.xml" Name="System.Threading.Tasks.Extensions.xml" Source="$(var.FaineSwitcher_TargetDir)System.Threading.Tasks.Extensions.xml" />
+      </Component>
+      <Component Id="CpuMathNative.dll" Guid="66c0b604-2fcc-4ba8-ba27-def647ee3074">
+        <File Id="CpuMathNative.dll" Name="CpuMathNative.dll" Source="$(var.FaineSwitcher_TargetDir)CpuMathNative.dll" />
+      </Component>
+      <Component Id="FaineSwitch.application" Guid="0f2a87b7-ca81-43fa-82f8-a03730d7e07c">
+        <File Id="FaineSwitch.application" Name="FaineSwitch.application" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.application" />
       </Component>
     </DirectoryRef>
   </Product>
