--- a/FaineSwitcherSetup/Product.wxs
+++ b/FaineSwitcherSetup/Product.wxs
@@ -23,6 +23,8 @@
     <Binary Id="dotNetFx48Full_x86_x64" SourceFile="dotNetFx48Full_x86_x64.exe"/>
 
 
+
+
     <!-- UI settings -->
     <UI>
       <Property Id="WIXUI_INSTALLDIR" Value="APPLICATIONROOTDIRECTORY" />
@@ -39,7 +41,7 @@
     <CustomAction Id="LaunchApplication"
         BinaryKey="WixCA"
         DllEntry="WixShellExec"
-        Impersonate="yes" />
+        Impersonate="no" />
 
     <!--define references -->
     <Feature Id="ProductFeature" Title="FaineSwitcher" Level="1">
@@ -114,6 +116,7 @@
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
         <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
+        <Condition>Privileged</Condition>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
@@ -125,6 +128,7 @@
                   Description="FaineSwitch"
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
+        <Condition>Privileged</Condition>
         <RemoveFolder Id="DesktopFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
