--- a/FaineSwitcherSetup/Product.wxs
+++ b/FaineSwitcherSetup/Product.wxs
@@ -23,8 +23,6 @@
     <Binary Id="dotNetFx48Full_x86_x64" SourceFile="dotNetFx48Full_x86_x64.exe"/>
 
 
-
-
     <!-- UI settings -->
     <UI>
       <Property Id="WIXUI_INSTALLDIR" Value="APPLICATIONROOTDIRECTORY" />
@@ -41,7 +39,7 @@
     <CustomAction Id="LaunchApplication"
         BinaryKey="WixCA"
         DllEntry="WixShellExec"
-        Impersonate="no" />
+        Impersonate="yes" />
 
     <!--define references -->
     <Feature Id="ProductFeature" Title="FaineSwitcher" Level="1">
@@ -116,7 +114,6 @@
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
         <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
-        <Condition>Privileged</Condition>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
@@ -128,7 +125,6 @@
                   Description="FaineSwitch"
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
-        <Condition>Privileged</Condition>
         <RemoveFolder Id="DesktopFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
