--- a/FaineSwitcherSetup/Product.wxs
+++ b/FaineSwitcherSetup/Product.wxs
@@ -23,8 +23,6 @@
     <Binary Id="dotNetFx48Full_x86_x64" SourceFile="dotNetFx48Full_x86_x64.exe"/>
 
 
-
-
     <!-- UI settings -->
     <UI>
       <Property Id="WIXUI_INSTALLDIR" Value="APPLICATIONROOTDIRECTORY" />
@@ -41,7 +39,7 @@
     <CustomAction Id="LaunchApplication"
         BinaryKey="WixCA"
         DllEntry="WixShellExec"
-        Impersonate="no" />
+        Impersonate="yes" />
 
     <!--define references -->
     <Feature Id="ProductFeature" Title="FaineSwitcher" Level="1">
@@ -91,6 +89,9 @@
       <ComponentRef Id="System.Threading.Tasks.Extensions.xml" />
       <ComponentRef Id="CpuMathNative.dll" />
       <ComponentRef Id="FaineSwitch.application" />
+
+      <ComponentRef Id="exceptionWords.txt" />
+      <ComponentRef Id="needSwitchWords.txt" />
     </Feature>
 
     <!--define path references -->
@@ -116,7 +117,6 @@
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
         <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
-        <Condition>Privileged</Condition>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
@@ -128,7 +128,6 @@
                   Description="FaineSwitch"
                   Target="[#FaineSwitch.exe]"
                   WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
-        <Condition>Privileged</Condition>
         <RemoveFolder Id="DesktopFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\MyCompany\FaineSwitch" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
@@ -272,6 +271,12 @@
       </Component>
       <Component Id="FaineSwitch.application" Guid="0f2a87b7-ca81-43fa-82f8-a03730d7e07c">
         <File Id="FaineSwitch.application" Name="FaineSwitch.application" Source="$(var.FaineSwitcher_TargetDir)FaineSwitch.application" />
+      </Component>
+      <Component Id="exceptionWords.txt" Guid="559f4ba4-a0f5-4ba7-88fe-5a989ff6d737">
+        <File Id="exceptionWords.txt" Name="exceptionWords.txt" Source="$(var.FaineSwitcher_TargetDir)exceptionWords.txt" />
+      </Component>
+      <Component Id="needSwitchWords.txt" Guid="92d5cc20-9c7f-42bc-a283-7d2c3b7152e3">
+        <File Id="needSwitchWords.txt" Name="needSwitchWords.txt" Source="$(var.FaineSwitcher_TargetDir)needSwitchWords.txt" />
       </Component>
     </DirectoryRef>
   </Product>
